# cobotaa_Tech

./: .gitignore  INSTALL_CUMOTION.md  INSTALL_ISAAC_SIM.md  README.md  upstream.repo
curobo_motion_generation/: README.md  package.xml  setup.cfg  setup.py
curobo_motion_generation/config/: cobotta900.yml
curobo_motion_generation/curobo_motion_generation/: motion_gen_reacher.py
cvrb0609_description/: CMakeLists.txt  package.xml
cvrb0609_description/launch/: display.launch.py
cvrb0609_description/urdf/: cvrb0609.urdf  cvrb0609.urdf.xacro  example_cvrb0609.urdf  example_cvrb0609.urdf.xacro  inertial_macros.xacro  schmalz_ecbpmi.xacro
cvrb0609_description/urdf/example_cvrb0609/: example_cvrb0609.usd
cvrb0609_description/urdf/example_cvrb0609/configuration/: example_cvrb0609_base.usd  example_cvrb0609_physics.usd  example_cvrb0609_robot.usd  example_cvrb0609_sensor.usd
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
techtory_cobotta_bringup/: CMakeLists.txt  package.xml
techtory_cobotta_bringup/config/: controller.yaml  rviz.rviz  techtory_spawn_planning_scene.py
techtory_cobotta_bringup/launch/: isaac_techtory_cobotta_bringup.py  techtory_cobotta_hw_bringup.launch.py  techtory_cobotta_mj_bringup.launch.py  techtory_cobotta_mock_bringup.launch.py  techtory_cobotta_sw_bringup.launch.py
techtory_cobotta_hybrid_planning/: CMakeLists.txt  README.md  package.xml
techtory_cobotta_hybrid_planning/launch/: hybrid_planning_demo.launch.py
techtory_cobotta_hybrid_planning/src/: hybrid_planning_demo_node.cpp
techtory_cobotta_isaacsim/: CMakeLists.txt  package.xml
techtory_cobotta_isaacsim/launch/: isaacsim_launcher.launch.py
techtory_cobotta_isaacsim/scripts/: main.py
techtory_cobotta_isaacsim/spawners/: spawn_camera.py  spawn_objects.py  spawn_robot.py  spawn_scene.py  spawn_techtory_cell.py
techtory_cobotta_moveit/: .setup_assistant  CMakeLists.txt  package.xml
techtory_cobotta_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  techtory_demo_description.ros2_control.xacro  techtory_demo_description.srdf  techtory_demo_description.urdf  techtory_demo_description.urdf.xacro
techtory_cobotta_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
techtory_cobotta_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
techtory_cobotta_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_planning.yaml  techtory_cvrb0609_workcell.srdf
techtory_cobotta_moveit_config/launch/: move_group.launch.py
techtory_cobotta_system/: package.xml  setup.cfg  setup.py
techtory_cobotta_system/config/: bt_operator.yaml  lifecycle_manager.yaml  poses.yaml  poses_hammer.yaml
techtory_cobotta_system/launch/: techtory_cobotta_system.launch.py
techtory_cobotta_system/trees/: techtory_cobotta_gripper.xml  techtory_cobotta_system.btproj  techtory_cobotta_system.xml  techtory_cobotta_system_2.xml  techtory_cobotta_system_all.xml  techtory_cobotta_system_all_hammer.xml  techtory_cobotta_system_all_hammer_debug.xml
techtory_cobotta_workcell_description/: CMakeLists.txt  package.xml
techtory_cobotta_workcell_description/config/: mujoco_controllers.yaml  topic_based_controllers.yaml
techtory_cobotta_workcell_description/launch/: display.launch.py  mujoco.launch.py  topic_based.launch.py
techtory_cobotta_workcell_description/urdf/: cobotta_hardware.ros2_control.xacro  cobotta_mit_gripper.xacro  cobotta_sphere_cumotion.xrdf  cobotta_sphere_lula.yml  cvrb0609.urdf.xacro  scene_tectory.xml  shelf.xacro  techtory_cobotta_workcell.urdf  techtory_cobotta_workcell.urdf.xacro  techtory_cvrb0609_controller.usd  techtory_cvrb0609_moveit-final.usd  techtory_cvrb0609_moveit.usd  techtory_cvrb0609_workcell_temp.usd
techtory_cvrb0609_workcell_description/: CMakeLists.txt  package.xml
techtory_cvrb0609_workcell_description/launch/: display.launch.py
techtory_cvrb0609_workcell_description/urdf/: cobotta_sphere_lula.yml  cobotta_with_controller.usd  scene_tectory.xml  techtory_cvrb0609_moveit.usd  techtory_cvrb0609_moveit2.usd  techtory_cvrb0609_workcell.urdf  techtory_cvrb0609_workcell.urdf.xacro  techtory_cvrb060_controller.usd  test_cobotaa-controller.usd
techtory_cvrb0609_workcell_description/urdf/configuration/: techtory_cvrb0609_workcell_temp_robot.usd
techtory_cvrb0609_workcell_description/urdf/mjcf/: techtory_cvrb0609_workcell.xml
techtory_cvrb0609_workcell_description/urdf/mjcf/assets/full/: mtl_m0  mtl_m2
techtory_cvrb0609_workcell_description/urdf/mjcf/assets/full/J2/: material.mtl
techtory_cvrb0609_workcell_description/urdf/mjcf/assets/full/J5/: material.mtl
techtory_cvrb0609_workcell_description/urdf/mjcf/assets/full/J6/: material.mtl
techtory_cvrb0609_workcell_description/urdf/techtory_cvrb0609_workcell/configuration/: techtory_cvrb0609_workcell_physics.usd  techtory_cvrb0609_workcell_robot.usd
techtory_demo_description_arm_ikfast_plugin/: CMakeLists.txt  package.xml  techtory_demo_description_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
techtory_demo_description_arm_ikfast_plugin/src/: ikfast_kinematics_parameters.yaml  techtory_demo_description_arm_ikfast_moveit_plugin.cpp  techtory_demo_description_arm_ikfast_solver.cpp
techtory_hybrid_planning/: CMakeLists.txt  README.md  package.xml  plugins.xml
techtory_hybrid_planning/config/: global_planner.yaml  global_planner_mtc.yaml  hybrid_planning_manager.yaml  local_planner.yaml  moveit_cpp.yaml
techtory_hybrid_planning/include/techtory_hybrid_planning/: global_mtc_planner.hpp
techtory_hybrid_planning/launch/: hybrid_planning.launch.py  hybrid_planning_demo.launch.py  hybrid_planning_demo2.launch.py  hybrid_planning_demo3.launch.py
techtory_hybrid_planning/src/: global_mtc_planner.cpp  hybrid_planning_demo2_node.cpp  hybrid_planning_demo3_node.cpp  hybrid_planning_demo_node.cpp
(+87 files in other folders)
