<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>techtory_cobotta_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vishnu.pbhat93@gmail.com">Vishnu</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_lifecycle_manager</depend>
  <depend>man2_bt_operator</depend>
  <depend>man2_bt_core</depend>
  <depend>man2_bt_bringup</depend>
  <depend>man2_bt_skill_clients</depend>
  <depend>moveit_skills</depend>
  <depend>techtory_cobotta_moveit</depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
