<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>techtory_cvrb0609_workcell_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="anm-vi@todo.todo">anm-vi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cvrb0609_description</depend>
  <depend>techtory_cell_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
