<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>techtory_hybrid_planning</name>
  <version>0.1.0</version>
  <description>
    Example package showing how to use the MoveIt 2 Hybrid Planning architecture
    on the Techtory Cobotta cell. Launches the Hybrid Planning Manager, Global
    Planner and Local Planner components together with a demo action client.
  </description>
  <maintainer email="vsp@ipa.fraunhofer.de">Vishuprasad Prachandabhanu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>pilz_industrial_motion_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>techtory_cobotta_moveit</exec_depend>
  <exec_depend>techtory_cobotta_workcell_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
